--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": ">=5.3.2",
         "symfony/framework-bundle": ">=3.0",
         "twig/twig": "*",
-        "doctrine/doctrine-bundle": "*"
+        "doctrine/doctrine-bundle": "*",
+        "stof/doctrine-extensions-bundle": "^1.2"
 
     },
     "autoload": {
